--- a/index.html
+++ b/index.html
@@ -295,14 +295,17 @@
   bottom: 70px;                      /* Adjust based on rarity position */
   left: 50%;
   transform: translateX(-50%);
-  width: 90%;
+  width: 75%;
+
+  min-height: 100px;
+  
   font-size: 1.05rem;
   font-weight: 600;
   color: #fdf8f2 !important;
   text-shadow: 1px 1px 2px #000;
   text-align: left;
   background-color: rgba(0, 0, 0, 0.2);
-  padding: 1.2rem 1rem;
+  padding: 1rem;
   border-radius: 8px;
   border-top: 2px solid #5a432e;
   border-bottom: 2px solid #5a432e;
