--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
     width: 100%;
     font-weight: 700;
     font-size: 1rem;
-    color: #2b3a23;
+    color: #fff;
   }
 
   .form-fields input[type="text"] {
