--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
     width: 100%;
     font-weight: 700;
     font-size: 1rem;
-    color: #fff;
+    color: #1b3c1a;
   }
 
   .form-fields input[type="text"] {
@@ -687,6 +687,13 @@
   letter-spacing: 0.02em;
   text-shadow: 0 1px 2px rgba(0, 0, 0, 0.4);
 }
+
+  .dark-mode .form-fields label {
+    width: 100%;
+    font-weight: 700;
+    font-size: 1rem;
+    color: #fff;
+  }
 
 /* Smooth scrollbar for modern browsers */
 section::-webkit-scrollbar {
