--- a/index.html
+++ b/index.html
@@ -835,6 +835,7 @@ body, header, #tabs button, section, .button, .catch-card, .fish-item {
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/whammy@0.2.0/whammy.min.js"></script>
 <script>
 
   function setupTabs() {
@@ -1066,38 +1067,51 @@ async function renderPhotoPosts() {
   });
 }
 
-function exportCatchCard(card, photo) {
+// 1. Main export function (call this in your share button)
+function exportCatchCardSmart(card, photo) {
+  const imgElem = card.querySelector(".catch-photo");
+  const src = imgElem?.src || photo?.src || "";
+
+  // Simple GIF detection: data URI starting with gif OR src ends with .gif
+  const isGif =
+    src.startsWith("data:image/gif") ||
+    /\.gif$/i.test(src) ||
+    (photo.src && photo.src.includes("gif"));
+
+  if (isGif) {
+    exportCatchCardAsVideo(card, photo);
+  } else {
+    exportCatchCardAsImage(card, photo);
+  }
+}
+
+// 2. Your original exportCatchCard logic, wrapped into exportCatchCardAsImage:
+function exportCatchCardAsImage(card, photo) {
   const clone = card.cloneNode(true);
   clone.classList.add("export-style");
   clone.style.width = "420px";
   clone.style.height = "620px";
 
-  // Add real DOM background based on rarity
-const bg = document.createElement("div");
-bg.className = "card-background";
-
-const backgroundMap = {
-  1: "./Background.png",
-  2: "./Background-2.png",
-  3: "./Background-3.png",
-  4: "./Background-4.png",
-  5: "./Background-5.png"
-};
-
-  // Add rarity stars
+  // Background and rarity logic
+  const bg = document.createElement("div");
+  bg.className = "card-background";
+  const backgroundMap = {
+    1: "./Background.png",
+    2: "./Background-2.png",
+    3: "./Background-3.png",
+    4: "./Background-4.png",
+    5: "./Background-5.png"
+  };
   const starsCount = Math.floor(Math.random() * 5) + 1;
   const rarity = document.createElement("div");
   rarity.className = "catch-rarity";
   rarity.textContent = "★".repeat(starsCount) + "☆".repeat(5 - starsCount);
   clone.appendChild(rarity);
   clone.classList.add(`rarity-${starsCount}`);
+  bg.style.backgroundImage = `url('${backgroundMap[starsCount]}')`;
+  clone.insertBefore(bg, clone.firstChild);
 
-bg.style.backgroundImage = `url('${backgroundMap[starsCount]}')`;
-
-// Insert background as first child
-clone.insertBefore(bg, clone.firstChild);
-
-  // Remove buttons from export
+  // Remove buttons
   const buttons = clone.querySelector(".catch-buttons");
   if (buttons) buttons.remove();
 
@@ -1148,6 +1162,7 @@ clone.insertBefore(bg, clone.firstChild);
       height: clone.offsetHeight,
       scrollX: 0,
       scrollY: 0,
+      backgroundColor: null,
     }).then((canvas) => {
       const ctx = canvas.getContext("2d");
       const watermarkImg = new Image();
@@ -1175,6 +1190,154 @@ clone.insertBefore(bg, clone.firstChild);
       };
     });
   }
+
+  const imgToLoad = clone.querySelector(".catch-photo");
+  if (imgToLoad && !imgToLoad.complete) {
+    imgToLoad.onload = renderCard;
+    imgToLoad.onerror = renderCard;
+  } else {
+    renderCard();
+  }
+}
+
+// 3. Export as video for GIFs — requires Whammy.js or your own encoder
+async function exportCatchCardAsVideo(card, photo) {
+  // Clone and setup card same as image export for styling
+  const clone = card.cloneNode(true);
+  clone.classList.add("export-style");
+  clone.style.width = "420px";
+  clone.style.height = "620px";
+
+  const bg = document.createElement("div");
+  bg.className = "card-background";
+  const backgroundMap = {
+    1: "./Background.png",
+    2: "./Background-2.png",
+    3: "./Background-3.png",
+    4: "./Background-4.png",
+    5: "./Background-5.png"
+  };
+  const starsCount = Math.floor(Math.random() * 5) + 1;
+  const rarity = document.createElement("div");
+  rarity.className = "catch-rarity";
+  rarity.textContent = "★".repeat(starsCount) + "☆".repeat(5 - starsCount);
+  clone.appendChild(rarity);
+  clone.classList.add(`rarity-${starsCount}`);
+  bg.style.backgroundImage = `url('${backgroundMap[starsCount]}')`;
+  clone.insertBefore(bg, clone.firstChild);
+
+  const buttons = clone.querySelector(".catch-buttons");
+  if (buttons) buttons.remove();
+
+  const originalImg = clone.querySelector(".catch-photo");
+  const imageWrapper = document.createElement("div");
+  imageWrapper.className = "image-window";
+  imageWrapper.appendChild(originalImg.cloneNode(true));
+  originalImg.parentNode.replaceChild(imageWrapper, originalImg);
+
+  const insertedImg = imageWrapper.querySelector("img");
+  insertedImg.className = "catch-photo";
+  insertedImg.removeAttribute("style");
+
+  const caption = clone.querySelector(".catch-caption");
+  const info = clone.querySelector(".catch-info");
+  if (caption && info && info.contains(caption)) {
+    info.removeChild(caption);
+    clone.insertBefore(caption, info);
+  }
+
+  const weight = clone.querySelector(".catch-weight");
+  if (weight) weight.remove();
+  const date = clone.querySelector(".catch-date");
+  if (date) date.remove();
+
+  const cardNumber = document.createElement("div");
+  cardNumber.className = "card-number";
+  cardNumber.textContent = `#${String(photo.id).padStart(3, "0")}`;
+  clone.appendChild(cardNumber);
+
+  // Container for offscreen rendering
+  const renderContainer = document.createElement("div");
+  renderContainer.style.position = "absolute";
+  renderContainer.style.top = "-9999px";
+  renderContainer.style.left = "0";
+  renderContainer.style.width = "420px";
+  renderContainer.style.height = "620px";
+  renderContainer.appendChild(clone);
+  document.body.appendChild(renderContainer);
+
+  // We’ll grab frames from the gif by creating an offscreen <img> and <canvas>
+  const gifSrc = insertedImg.src;
+
+  // Load the GIF as Image
+  const gifImage = new Image();
+  gifImage.crossOrigin = "anonymous"; // important if hosted remotely
+  gifImage.src = gifSrc;
+
+  gifImage.onload = async () => {
+    try {
+      // For demonstration, capture first 10 frames at 100ms intervals (adjust as needed)
+      const frames = [];
+      const frameCount = 10;
+      const frameDelay = 100; // ms
+
+      const offscreenCanvas = document.createElement("canvas");
+      offscreenCanvas.width = clone.offsetWidth;
+      offscreenCanvas.height = clone.offsetHeight;
+      const ctx = offscreenCanvas.getContext("2d");
+
+      // We'll use a library like Whammy for encoding video
+      // Whammy requires an array of frames (canvas/frame + duration)
+
+      // To capture frames, for now we'll do repeated html2canvas snapshots (slow, but works)
+      for (let i = 0; i < frameCount; i++) {
+        // For each frame:
+        // You might want to advance the GIF frame here if possible
+        // But html2canvas can't render GIF animation frames directly
+
+        // Instead, draw clone DOM to canvas, which will show static GIF frame (usually first frame)
+        // So animated GIF video export requires a more advanced gif parsing lib or canvas frame extraction
+
+        const canvasFrame = await html2canvas(clone, {
+          width: clone.offsetWidth,
+          height: clone.offsetHeight,
+          scrollX: 0,
+          scrollY: 0,
+          backgroundColor: null,
+        });
+
+        frames.push({ image: canvasFrame, duration: frameDelay });
+
+        // Artificial delay between frames (simulate animation)
+        await new Promise((r) => setTimeout(r, frameDelay));
+      }
+
+      // Encode video with Whammy
+      const encoder = new Whammy.Video(1000 / frameDelay);
+      frames.forEach(({ image }) => encoder.add(image));
+      const output = encoder.compile();
+
+      // Create download link
+      const url = URL.createObjectURL(output);
+      const a = document.createElement("a");
+      a.href = url;
+      a.download = `catch-card-${photo.id}.webm`;
+      a.click();
+
+      // Cleanup
+      URL.revokeObjectURL(url);
+      renderContainer.remove();
+    } catch (err) {
+      console.error("Error exporting video:", err);
+      renderContainer.remove();
+    }
+  };
+
+  gifImage.onerror = () => {
+    alert("Failed to load GIF image for video export.");
+    renderContainer.remove();
+  };
+}
 
   const imgToLoad = clone.querySelector(".catch-photo");
   if (imgToLoad && !imgToLoad.complete) {
