--- a/index.html
+++ b/index.html
@@ -948,6 +948,55 @@ body, header, #tabs button, section, .button, .catch-card, .fish-item {
     });
   }
 
+  async function handleUpload() {
+  const input = document.getElementById("photoInput");
+  const files = input.files;
+  if (!files.length) {
+    alert("Please select at least one photo to upload.");
+    return;
+  }
+
+  const caption = document.getElementById("captionInput").value.trim();
+  const location = document.getElementById("locationInput").value.trim();
+  const weight = document.getElementById("weightInput").value.trim();
+
+  for (let i = 0; i < files.length; i++) {
+    const file = files[i];
+    if (!file.type.startsWith("image/")) continue;
+
+    try {
+      const dataURL = await readFileAsDataURL(file);
+      const timestamp = new Date().toISOString();
+
+      const photoData = {
+        src: dataURL,
+        caption,
+        location,
+        weight,
+        timestamp,
+      };
+
+      // 👇 Save to DB and retrieve assigned ID
+      const id = await addPhotoToDB(photoData);
+
+      // 👇 Add the ID to the local object
+      photoData.id = id;
+
+      // 👇 Render immediately to top of gallery
+      renderSinglePhoto(photoData);
+
+    } catch (error) {
+      console.error("Failed to process file:", error);
+    }
+  }
+
+  // Optional: Clear form
+  input.value = "";
+  document.getElementById("captionInput").value = "";
+  document.getElementById("locationInput").value = "";
+  document.getElementById("weightInput").value = "";
+}
+
   function renderSinglePhoto(photo) {
   const gallery = document.getElementById("photoGallery");
 
@@ -1022,59 +1071,13 @@ body, header, #tabs button, section, .button, .catch-card, .fish-item {
 
   card.appendChild(buttonRow);
 
-  // Show newest first
-  gallery.prepend(card);
+  // 👇 Add new photo to the top of the gallery
+gallery.prepend(card);
+
+// 👇 Smooth scroll the new card into view
+card.scrollIntoView({ behavior: "smooth", block: "start" });
 }
-
-  async function handleUpload() {
-  const input = document.getElementById("photoInput");
-  const files = input.files;
-  if (!files.length) {
-    alert("Please select at least one photo to upload.");
-    return;
-  }
-
-  const caption = document.getElementById("captionInput").value.trim();
-  const location = document.getElementById("locationInput").value.trim();
-  const weight = document.getElementById("weightInput").value.trim();
-
-  for (let i = 0; i < files.length; i++) {
-    const file = files[i];
-    if (!file.type.startsWith("image/")) continue;
-
-    try {
-      const dataURL = await readFileAsDataURL(file);
-      const timestamp = new Date().toISOString();
-
-      const photoData = {
-        src: dataURL,
-        caption,
-        location,
-        weight,
-        timestamp,
-      };
-
-      // 👇 Save to DB and retrieve assigned ID
-      const id = await addPhotoToDB(photoData);
-
-      // 👇 Add the ID to the local object
-      photoData.id = id;
-
-      // 👇 Render immediately to top of gallery
-      renderSinglePhoto(photoData);
-
-    } catch (error) {
-      console.error("Failed to process file:", error);
-    }
-  }
-
-  // Optional: Clear form
-  input.value = "";
-  document.getElementById("captionInput").value = "";
-  document.getElementById("locationInput").value = "";
-  document.getElementById("weightInput").value = "";
-}
-
+  
 async function renderPhotoPosts() {
   const gallery = document.getElementById("photoGallery");
   gallery.innerHTML = "";
