--- a/index.html
+++ b/index.html
@@ -835,7 +835,7 @@ body, header, #tabs button, section, .button, .catch-card, .fish-item {
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/whammy@0.2.0/whammy.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/antimatter15/whammy/whammy.js"></script>
 <script>
 
   function setupTabs() {
