--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     transform: scale(0.96);
   }
 
-  button .right-button{
+  .button .right-button{
     display: flex;
     gap: 0.75rem;
     align-items: centre;
