--- a/index.html
+++ b/index.html
@@ -849,11 +849,12 @@ body, header, #tabs button, section, .button, .catch-card, .fish-item {
 <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gif.js/0.2.0/gif.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gif.js/0.2.0/gif.worker.js"></script>
   <!-- Whammy.js -->
 <script src="https://cdn.jsdelivr.net/npm/whammy/whammy.js"></script>
 <script>
-  let useWhammy = true; // Set to true to use gif.js instead of Whammy
+  let useWhammy = false;
+  let useGifJs = true;
+  
 
   function setupTabs() {
   const memoriesTabBtn = document.getElementById("memoriesTabBtn");
