--- a/index.html
+++ b/index.html
@@ -852,6 +852,7 @@ body, header, #tabs button, section, .button, .catch-card, .fish-item {
   <!-- Whammy.js -->
 <script src="https://cdn.jsdelivr.net/npm/whammy/whammy.js"></script>
 <script>
+  let useWhammy = true;
   
   function setupTabs() {
   const memoriesTabBtn = document.getElementById("memoriesTabBtn");
@@ -1769,7 +1770,6 @@ function updateMapTiles(isDarkMode) {
   }
 }
 
-  let useWhammy = true;
 // ===== Main Window Load =====
 window.onload = async function () {
   try {
@@ -1799,22 +1799,23 @@ window.onload = async function () {
       });
     }
 
+    // === Export Method Toggle ===
     const exportToggle = document.getElementById("exportToggle");
-  if (!exportToggle) return;
+    if (exportToggle) {
+      // Load saved preference or fallback to true (Whammy)
+      let saved = localStorage.getItem("useWhammy");
+      useWhammy = saved === null ? true : saved === "true";
 
-  // Load saved preference from localStorage, fallback to true
-  const saved = localStorage.getItem("useWhammy");
-  useWhammy = saved === null ? true : saved === "true";
+      // Set initial button text based on current flag
+      exportToggle.textContent = useWhammy ? "Export: WebM" : "Export: GIF";
 
-  // Set initial button text
-  exportToggle.textContent = useWhammy ? "Export: WebM" : "Export: GIF";
-
-  exportToggle.addEventListener("click", () => {
-    useWhammy = !useWhammy;
-    localStorage.setItem("useWhammy", useWhammy);
-    exportToggle.textContent = useWhammy ? "Export: WebM" : "Export: GIF";
-  });
-};
+      // Toggle export method on button click
+      exportToggle.addEventListener("click", () => {
+        useWhammy = !useWhammy;
+        localStorage.setItem("useWhammy", useWhammy);
+        exportToggle.textContent = useWhammy ? "Export: WebM" : "Export: GIF";
+      });
+    }
 
     // === Upload Button ===
     const uploadBtn = document.getElementById("uploadButton");
