--- a/index.html
+++ b/index.html
@@ -1311,6 +1311,7 @@ function exportCatchCardAsImage(card, photo) {
   clone.style.width = "420px";
   clone.style.height = "620px";
 
+  // Offscreen rendering container
   const renderContainer = document.createElement("div");
   renderContainer.style.position = "absolute";
   renderContainer.style.top = "-9999px";
@@ -1320,6 +1321,7 @@ function exportCatchCardAsImage(card, photo) {
   renderContainer.appendChild(clone);
   document.body.appendChild(renderContainer);
 
+  // Initialize gif.js with worker explicitly set
   const gif = new GIF({
     workers: 2,
     quality: 10,
@@ -1331,32 +1333,38 @@ function exportCatchCardAsImage(card, photo) {
   const frameCount = 10;
   const frameDelay = 100;
 
-  for (let i = 0; i < frameCount; i++) {
-    const canvas = await html2canvas(clone, {
-      width: clone.offsetWidth,
-      height: clone.offsetHeight,
-      scrollX: 0,
-      scrollY: 0,
-      backgroundColor: null,
-      scale: 2,
+  try {
+    for (let i = 0; i < frameCount; i++) {
+      const canvas = await html2canvas(clone, {
+        width: clone.offsetWidth,
+        height: clone.offsetHeight,
+        scrollX: 0,
+        scrollY: 0,
+        backgroundColor: null,
+        scale: 2,
+      });
+
+      gif.addFrame(canvas, { delay: frameDelay });
+
+      // Simulate animation over time (optional)
+      await new Promise((res) => setTimeout(res, frameDelay));
+    }
+
+    gif.on("finished", function (blob) {
+      const url = URL.createObjectURL(blob);
+      const a = document.createElement("a");
+      a.href = url;
+      a.download = `catch-card-${photo.id}.gif`;
+      a.click();
+      URL.revokeObjectURL(url);
     });
 
-    gif.addFrame(canvas, { delay: frameDelay });
-
-    await new Promise((res) => setTimeout(res, frameDelay));
-  }
-
-  gif.on("finished", function(blob) {
-    const url = URL.createObjectURL(blob);
-    const a = document.createElement("a");
-    a.href = url;
-    a.download = `catch-card-${photo.id}.gif`;
-    a.click();
-    URL.revokeObjectURL(url);
+    gif.render();
+  } catch (err) {
+    alert("GIF export failed: " + err.message);
+  } finally {
     renderContainer.remove();
-  });
-
-  gif.render();
+  }
 }
 
 async function exportCatchCard(card, photo) {
